# gaffer-public

./: .gitignore  README.md
.beads/: issues.jsonl
.github/workflows/: attest-release.yml
examples/01-monorepo-build/: .gitignore  README.md  benchmark.sh  demo-caching.sh  demo-incremental.sh  demo-parallel.sh  graph.json  package-lock.json  package.json  test.sh  tsconfig.json
examples/02-distributed-build/: .gitignore  Makefile  README.md  docker-compose.yml  go.mod  graph.json  test.sh
examples/03-multi-language-build/: README.md  graph.json  test.sh
examples/04-incremental-testing/: COMPLETION.md  README.md  VERIFICATION_FIXES.md  demo.sh  graph.json  jest.config.js  package-lock.json  package.json  test.sh
examples/05-ml-workflows/: .gitignore  README.md  graph.json  requirements.txt  test.sh
examples/06-local-dev-environment/: .gitignore  README.md  graph.json  package-lock.json  package.json  test.sh
examples/07-watch-workflows/: .gitignore  ARCHITECTURE.md  QUICKSTART.md  README.md  demo.sh  graph.json  test.sh
examples/08-multi-language-task-running/: .gitignore  COMPARISON.md  IMPLEMENTATION.md  QUICKSTART.md  README.md  USAGE_NOTE.md  benchmark.sh  graph.json  setup.sh  test.sh
examples/08-multi-language-task-running/rust-cli/: Cargo.toml
examples/08-multi-language-task-running/rust-cli/src/: api.rs  main.rs  output.rs
examples/18-network-aware-builds/: .gitignore  QUICKSTART.md  README.md  VERIFICATION_FIXES.md  go.mod  (+3 more)
examples/19-cross-platform-builds/rust-bin/: Cargo.toml
examples/19-cross-platform-builds/rust-bin/src/: main.rs
(+177 files in other folders)
